--- a/index.html
+++ b/index.html
@@ -141,6 +141,16 @@
             </form>
         </div>
         
+        <!-- Canvas Drawing Feature -->
+<div class="my-8 flex flex-col items-center">
+    <h2 class="text-lg font-semibold mb-2">Draw or Sign</h2>
+    <canvas id="signatureCanvas" width="400" height="150" class="border-2 border-gray-700 rounded-lg bg-gray-900"></canvas>
+    <div class="mt-2 space-x-2">
+        <button id="clearCanvasBtn" class="px-4 py-1 bg-red-500 text-white rounded shadow hover:bg-red-600">Clear</button>
+        <button id="saveCanvasBtn" class="px-4 py-1 bg-green-500 text-white rounded shadow hover:bg-green-600">Save</button>
+    </div>
+    <div id="canvasImagePreview" class="mt-4"></div>
+</div>
         <!-- News Grid -->
         <div id="newsGrid" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
             <!-- News articles will be dynamically injected here by JavaScript -->
@@ -791,6 +801,38 @@
             });
 
         })();
+    // Canvas Drawing Logic
+const canvas = document.getElementById('signatureCanvas');
+const ctx = canvas.getContext('2d');
+let drawing = false;
+
+canvas.addEventListener('mousedown', () => { drawing = true; });
+canvas.addEventListener('mouseup', () => { drawing = false; ctx.beginPath(); });
+canvas.addEventListener('mouseout', () => { drawing = false; ctx.beginPath(); });
+canvas.addEventListener('mousemove', draw);
+
+function draw(e) {
+    if (!drawing) return;
+    ctx.lineWidth = 2;
+    ctx.lineCap = 'round';
+    ctx.strokeStyle = '#A855F7'; // Indigo color
+
+    const rect = canvas.getBoundingClientRect();
+    ctx.lineTo(e.clientX - rect.left, e.clientY - rect.top);
+    ctx.stroke();
+    ctx.beginPath();
+    ctx.moveTo(e.clientX - rect.left, e.clientY - rect.top);
+}
+
+document.getElementById('clearCanvasBtn').addEventListener('click', () => {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    document.getElementById('canvasImagePreview').innerHTML = '';
+});
+
+document.getElementById('saveCanvasBtn').addEventListener('click', () => {
+    const dataURL = canvas.toDataURL('image/png');
+    document.getElementById('canvasImagePreview').innerHTML = `<img src="${dataURL}" alt="Saved drawing" class="border mt-2 rounded-lg" />`;
+});
     </script>
 </body>
 </html>
