--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             const { jsPDF } = window.jspdf;
 
             const availableTags = ["AI", "Entertainment", "Finance", "Industrial", "Pharma", "Real Estate", "Retail", "Technological Services", "Telecommunications"].sort();
-            const API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=";
-            const apiKey = "AIzaSyD9xRkAan0WhW8GTegveSaU5gaInCO4Yy0";
+            const _URL = "https://generativelanguage.googles.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=";
+            const apiKey = "";
 
             const initialNews = [
                 {
